--- a/index.html
+++ b/index.html
@@ -51,27 +51,28 @@
 </head>
 <body>
     <header>
-        <h1>Centro Medico de Bogotá</h1>
+        <h1><img src="img/hospital.png" alt="" width="30">REGISTRAR MEDICOS <img src="img/hospital.png" alt="" width="30"></h1>
         <p>¡Bienvenidos a nuestra página web especializada en el registro de médicos y pacientes! En nuestro sitio web, nos enorgullece ofrecer una plataforma integral y segura para mantener un registro detallado y organizado de médicos y pacientes. Nuestra misión es facilitar la administración de información médica, asegurando que tanto los profesionales de la salud como los pacientes tengan acceso rápido y confiable a sus datos.</p>
     </header>
     <ul>
         <li>
-            <a href="registro_medicos.html">
+            <a href="registro-medicos.html">
                <center> <img src="img/medicos.png" alt="" width="39">REGISTRAR MEDICOS</center>
+               
             </a>
         </li>
         <li>
-            <a href="registro_pacientes.html">
+            <a href="registro-pacientes.html">
                 <center><img src="img/pacientes.png" alt="" width="39"> REGISTRAR PACIENTES </center>
             </a>
         </li>
         <li>
-            <a href="listado_medicos.html">
+            <a href="listado-medicos.html">
                <center> <img src="img/registro de medicos.png" alt="" width="39"> LISTADO DE MEDICOS </center>
             </a>
         </li>
         <li>
-            <a href="listado_pacientes.html">
+            <a href="listado-pacientes.html">
                 <center><img src="img/registro de paciente.png" alt="" width="39">LISTADO DE PACIENTES</center>
             </a>
         </li>
