--- a/registro-medicos.html
+++ b/registro-medicos.html
@@ -45,7 +45,7 @@
         <input type="submit" value="ENVIAR">
     </form>
     <div class="boton-container">
-        <a  href="index.html"> <input type="button" value="volver">  Devolver</a><br><br>
+        <a  href="index.html"> <input type="button" value="volver"></a></div><br><br>
     </div>
     <script src="app.js"></script>    
 </body>
