--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <h1><img src="img/hospital.png" alt="" width="30">REGISTRAR MEDICOS <img src="img/hospital.png" alt="" width="30"></h1>
+        <h1><img src="img/hospital.png" alt="" width="30">Centro Medico de Bogotá <img src="img/hospital.png" alt="" width="30"></h1>
         <p>¡Bienvenidos a nuestra página web especializada en el registro de médicos y pacientes! En nuestro sitio web, nos enorgullece ofrecer una plataforma integral y segura para mantener un registro detallado y organizado de médicos y pacientes. Nuestra misión es facilitar la administración de información médica, asegurando que tanto los profesionales de la salud como los pacientes tengan acceso rápido y confiable a sus datos.</p>
     </header>
     <ul>
